--- a/admin/src/global.css
+++ b/admin/src/global.css
@@ -1,22 +1,21 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap');
+@import "tailwindcss";
 
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@theme {
+  --color-bkg: #FFF8EF;
+  --color-red: #AD2C3F;
+  --color-darkred: #47121A;
+  --color-accent: #FFCC00;
+  --color-tp: rgba(0, 0, 0, .1);
+  --font-dm: DM Serif Text, "serif";
 }
 
+:root {
+  background-color: #FFF8EF;
+}
+
+/*
 a {
   font-weight: 500;
   color: #646cff;
@@ -74,4 +73,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
