Combines EventForm functionality so it can create/update, reformatting of the admin panel ui, supports an event having multiple times now

--- a/admin/src/global.css
+++ b/admin/src/global.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap');
-@import "tailwindcss";
 
+@font-face {
+  font-family: Newborough;
+  src: url(./assets/fonts/NEWBOROU.TTF);
+}
+
+@import "tailwindcss";
 
 @theme {
   --color-bkg: #FFF8EF;
@@ -9,6 +14,7 @@
   --color-accent: #FFCC00;
   --color-tp: rgba(0, 0, 0, .1);
   --font-dm: DM Serif Text, "serif";
+  --font-newb: Newborough, "sans-serif";
 }
 
 :root {
