APIs setup for Events, EventDates, and EventTimes. Admin panel is now fully capable of creating/updating/deleting events.
Added filters and searching to admin panel for events. Also started to implement the public facing frontend.

--- a/admin/src/global.css
+++ b/admin/src/global.css
@@ -17,6 +17,13 @@
   --font-newb: Newborough, "sans-serif";
 }
 
+#parallelogram {
+  padding: 8px;
+  display: inline-block;
+  background: #AD2C3F;
+  transform: skewX(-30deg);
+}
+
 :root {
   background-color: #FFF8EF;
 }
