--- a/admin/src/global.css
+++ b/admin/src/global.css
@@ -23,73 +23,68 @@
   --breakpoint-xl: 1600px;
 }
 
-#parallelogram {
-  padding: 8px;
-  display: inline-block;
-  background: #AD2C3F;
-  transform: skewX(-30deg);
-}
-
 :root {
   background-color: #FFF8EF;
 }
 
-/*
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+.skew-r {
+  transform: skewX(30deg);
 }
 
-a:hover {
-  color: #535bf2;
+.skew-l {
+  transform: skewX(-30deg);
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.clickable {
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: all 0.2s ease-in-out;
 }
 
-button:hover {
-  border-color: #646cff;
+.clickable:hover {
+  transform: scale(1.02);
+  opacity: 0.5;
 }
 
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.clickable:active {
+  transform: scale(1);
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
+.clickable-l-skew {
+  cursor: pointer;
+  transition: all 0.2s ease;
+  transform: skewX(-30deg);
+}
 
-  a:hover {
-    color: #747bff;
-  }
+.clickable-l-skew:hover {
+  transform: skewX(-30deg);
+  opacity: 0.5;
+}
 
-  button {
-    background-color: #f9f9f9;
-  }
-} */
+/* Right skew */
+.clickable-r-skew {
+  cursor: pointer;
+  transition: all 0.2s ease;
+  transform: skewX(30deg);
+}
+
+.clickable-r-skew:hover {
+  transform: skewX(30deg);
+  opacity: 0.5;
+}
+
+
+
+.page-wrapper {
+  width: 100%;
+  margin: auto;
+  max-width: 1400px;
+  padding-right: 8px;
+  padding-left: 8px;
+}
+
+.page-l-wrapper {
+  width: 100%;
+  margin-left: auto;
+  max-width: 1400px;
+  padding-right: 8px;
+}
